project_02/kubernetes/01-landingpage-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: landingpage
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000
  selector:
    app: landingpage
